test/cases/parser/ExternNameUnexpected.errors
src/ExternNameUnexpected.b:4:20: Syntax error (expected '}')
