test/cases/parser/ExternNameUnexpected.b
module ExternNameUnexpected

interface {
    function foo() = "hello";
}
